Fix ASSERT in URLRequestContextGetterQt due to race condition

Setting httpCacheType followed by persistentCookiesPolicy
may lead to io thread calling generateHttpCache just before
generateCookieStore, which triggers assert in line 344.
Recall generateHttpCache in case generateHttpCache was
called before generateCookieStore.

Task-number: QTBUG-61047
Change-Id: I1cfe5f18a884bd0d76fce4b30da0e22359cab2af
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>